--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,10 +3,10 @@
 
 - name: create shared directories
   file:
-    path: "{{ item }}"
+    path: $item
     state: "directory"
-    owner: "{{ user }}"
-    group: "{{ user }}"
+    owner: $user
+    group: $user
     mode: "0755"
   with_items:
     - $default_directories
@@ -16,16 +16,16 @@
   template:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
-    owner: "{{ user }}"
-    group: "{{ user }}"
+    owner: $user
+    group: $user
     mode: "0600"
   with_items: $templates
 
 - name: create or update the bare Git repository
   git:
-    repo: "{{ repo }}"
+    repo: $repo
     dest: "{{ deploy_to }}/scm"
-    version: "{{ branch }}"
+    version: $branch
     bare: yes
     update: yes
     accept_hostkey: yes
@@ -33,14 +33,14 @@
 - name: clone the bare Git repository to build directory
   git:
     repo: "{{ deploy_to }}/scm"
-    dest: "{{ build_path }}"
-    version: "{{ branch }}"
+    dest: $build_path
+    version: $branch
     bare: no
     update: yes
 
 - name: correct build directory permissions
   file:
-    path: "{{ build_path }}"
+    path: $build_path
     mode: 0755
 
 - name: symlink shared files to build directory
