--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   description: "prepare new application releases "
   license: MIT
   min_ansible_version: 1.4
-  version: 0.1.2
+  version: 0.1.5
   platforms:
    - name: Ubuntu
      versions:
@@ -15,4 +15,4 @@ galaxy_info:
   categories:
     - web
 dependencies:
-  - nicolai86.ansible-deployment-facts
+  - nicolai86.deployment-facts
