use git archive to clone from bare repo
this allows pruning of files and folders using .gitattributes files.
closes #4

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,4 +17,8 @@ shared_path: "{{ deploy_to }}/shared"
 # path where new releases are build
 build_path: "{{ deployment.build_path }}"
 
+# templates to be evaluated upon release, e.g. your database.j2
 templates: []
+
+# files that will be deleted after a git checkout has been made
+remove_files: []
