add some more assumptions to the verify role

--- a/examples/roles/verify/tasks/main.yml
+++ b/examples/roles/verify/tasks/main.yml
@@ -10,5 +10,17 @@
     state: directory
 
 - file:
+    path: "{{ deploy_to }}/scm"
+    state: directory
+
+- file:
+    path: "{{ shared_path }}"
+    state: directory
+
+- file:
+    path: "{{ deploy_to }}/releases"
+    state: directory
+
+- file:
     path: "{{ build_path }}/examples/paths"
     state: file
