--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,9 +16,9 @@
   template:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
-    owner: "{{ user }}"
-    group: "{{ user }}"
-    mode: "0600"
+    owner: "{{ item.user | user }}"
+    group: "{{ item.group | user }}"
+    mode: "{{ item.mode | 0600 }}"
   with_items:
     - "{{ templates }}"
 
