--- a/examples/playbook.yml
+++ b/examples/playbook.yml
@@ -1,7 +1,7 @@
 - hosts: vm
   remote_user: vagrant
   sudo: true
-  gather_facts: no
+  gather_facts: yes
   vars:
     user: vagrant
     home_directory: "/home/{{ user }}"
@@ -27,5 +27,6 @@
 
       templates:
         - { src: "templates/bargrooves.j2", dest: "{{ shared_path }}/examples/paths" }
+        - { src: "templates/bargrooves.j2", dest: "{{ shared_path }}/examples/custom", mode: 744, owner: "nobody", group: "admin" }
 
     - verify
